--- a/src/components/JobCard.tsx/JobCard.scss
+++ b/src/components/JobCard.tsx/JobCard.scss
@@ -1,6 +1,29 @@
+.jobcard--container {
+  text-align: left;
+  .card--header {
+    display: flex;
+    align-items: end;
+    p {
+      margin-right: 0.5em;
+      font-size: 1.2rem;
+      &:nth-child(2) {
+        font-weight: bold;
+      }
+    }
+  }
+  .card--main {
+  }
+}
+
 .jobcard--container--dark {
   background-color: #19202d;
   color: #fff;
   padding: 2em;
   margin: 1em;
+  p {
+    color: #6e8098;
+  }
+  h1 {
+    color: #fff;
+  }
 }
