--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 * {
   box-sizing: border-box;
 }
@@ -9,7 +11,8 @@ body {
   padding: 0;
 
   text-align: center;
+  font-family: $font;
 }
 .dark {
-  background-color: #121721;
+  background-color: $midnight;
 }
