--- a/src/components/JobCard.tsx/JobCard.css
+++ b/src/components/JobCard.tsx/JobCard.css
@@ -1,6 +1,13 @@
 .jobcard--container {
   text-align: left;
 }
+.jobcard--container .company--logo {
+  width: 50px;
+  height: 50px;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 12px;
+}
 .jobcard--container .card--header {
   display: flex;
   align-items: end;
@@ -14,7 +21,7 @@
 }
 .jobcard--container--dark {
   background-color: #19202d;
-  color: #fff;
+  color: #ffffff;
   padding: 2em;
   margin: 1em;
 }
@@ -22,5 +29,5 @@
   color: #6e8098;
 }
 .jobcard--container--dark h1 {
-  color: #fff;
+  color: #ffffff;
 }/*# sourceMappingURL=JobCard.css.map */
