--- a/src/components/JobCard.tsx/JobCard.scss
+++ b/src/components/JobCard.tsx/JobCard.scss
@@ -1,5 +1,14 @@
+@import "../../variables.scss";
+
 .jobcard--container {
   text-align: left;
+  .company--logo {
+    width: 50px;
+    height: 50px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 12px;
+  }
   .card--header {
     display: flex;
     align-items: end;
@@ -16,14 +25,14 @@
 }
 
 .jobcard--container--dark {
-  background-color: #19202d;
-  color: #fff;
+  background-color: $veryDarkBlue;
+  color: $pureWhite;
   padding: 2em;
   margin: 1em;
   p {
-    color: #6e8098;
+    color: $darkGrey;
   }
   h1 {
-    color: #fff;
+    color: $pureWhite;
   }
 }
