--- a/src/components/JobCard.tsx/JobCard.css
+++ b/src/components/JobCard.tsx/JobCard.css
@@ -1,5 +1,8 @@
 .jobcard--container {
   text-align: left;
+  margin: 2.5em 1em;
+  padding: 1em;
+  border-radius: 6px;
 }
 .jobcard--container .company--logo {
   width: 50px;
@@ -7,23 +10,31 @@
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 12px;
+  position: relative;
+  top: -40px;
 }
 .jobcard--container .card--header {
   display: flex;
-  align-items: end;
 }
 .jobcard--container .card--header p {
-  margin-right: 0.5em;
-  font-size: 1.2rem;
+  margin: 0 0.5em 0 0;
 }
-.jobcard--container .card--header p:nth-child(2) {
+.jobcard--container .card--header span {
   font-weight: bold;
+  color: #6e8098;
+  font-size: 1.1rem;
+  margin-right: 0.4em;
 }
+.jobcard--container .card--main h1 {
+  font-size: 1.25rem;
+}
+.jobcard--container .card--main h4 {
+  color: #5960e0;
+}
+
 .jobcard--container--dark {
   background-color: #19202d;
   color: #ffffff;
-  padding: 2em;
-  margin: 1em;
 }
 .jobcard--container--dark p {
   color: #6e8098;
