fixing search bar for mobile view, starting to setup filterPopUp

--- a/src/components/JobCard.tsx/JobCard.style.scss
+++ b/src/components/JobCard.tsx/JobCard.style.scss
@@ -51,3 +51,13 @@
     color: $pureWhite;
   }
 }
+.jobcard--container--light {
+  background-color: $pureWhite;
+
+  p {
+    color: $darkGrey;
+  }
+  h1 {
+    color: $midnight;
+  }
+}
