--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,7 +6,7 @@ $veryDarkBlue: #19202d;
 $midnight: #121721;
 $pureWhite: #ffffff;
 $almostWhite: #f8f8f8;
-$lightGrey: #121721;
+$lightGrey: #f4f6f8;
 $grey: #9daec2;
 $darkGrey: #6e8098;
 $button2Bg: #eeeffc;
