--- a/src/components/JobCard.tsx/JobCard.style.css
+++ b/src/components/JobCard.tsx/JobCard.style.css
@@ -41,4 +41,14 @@
 }
 .jobcard--container--dark h1 {
   color: #ffffff;
-}/*# sourceMappingURL=JobCard.css.map */
+}
+
+.jobcard--container--light {
+  background-color: #ffffff;
+}
+.jobcard--container--light p {
+  color: #6e8098;
+}
+.jobcard--container--light h1 {
+  color: #121721;
+}/*# sourceMappingURL=JobCard.style.css.map */
