styling mobile job description

--- a/src/components/JobDetailPage/JobDetailPage.css
+++ b/src/components/JobDetailPage/JobDetailPage.css
@@ -65,6 +65,33 @@ h4 {
   align-items: center;
   color: #6e8098;
 }
+.job--description--page--container main h1 {
+  margin-bottom: 1em;
+}
+.job--description--page--container main ul,
+.job--description--page--container main ol {
+  padding-left: 0;
+  margin: 2em auto 2em 1em;
+}
+.job--description--page--container main ul li,
+.job--description--page--container main ol li {
+  margin-bottom: 1em;
+}
+.job--description--page--container main ul li::marker,
+.job--description--page--container main ol li::marker {
+  color: #5964e0;
+  font-weight: bold;
+  padding-right: 20px;
+}
+.job--description--page--container main p,
+.job--description--page--container main li {
+  line-height: 1.625;
+  color: #6e8098;
+}
+.job--description--page--container main ol li {
+  list-style-position: outside;
+  padding-left: 10px;
+}
 
 .apply--btn {
   display: block;
