--- a/src/components/JobDetailPage/JobDetailPage.scss
+++ b/src/components/JobDetailPage/JobDetailPage.scss
@@ -66,17 +66,36 @@ h4 {
         color: $darkGrey;
       }
     }
-    // .apply--btn {
-    //   display: block;
-    //   text-decoration: none;
-    //   background-color: $violet;
-    //   text-align: center;
-    //   padding: 1em;
-    //   color: $pureWhite;
-    //   font-weight: bold;
-    //   font-size: 1rem;
-    //   border-radius: 6px;
-    // }
+  }
+  main {
+    h1 {
+      margin-bottom: 1em;
+    }
+    ul,
+    ol {
+      padding-left: 0;
+      margin: 2em auto 2em 1em;
+      li {
+        margin-bottom: 1em;
+        &::marker {
+          color: $violet;
+          font-weight: bold;
+          padding-right: 20px;
+        }
+      }
+    }
+    p,
+    li {
+      line-height: 1.625;
+      color: $darkGrey;
+    }
+
+    ol {
+      li {
+        list-style-position: outside;
+        padding-left: 10px;
+      }
+    }
   }
 }
 .apply--btn {
