--- a/src/components/JobDetailPage/JobDetailPage.css
+++ b/src/components/JobDetailPage/JobDetailPage.css
@@ -18,6 +18,7 @@ h4 {
   padding: 0 3em 2em 3em;
   border-radius: 6px;
   margin-bottom: 2em;
+  text-align: center;
 }
 .job--description--page--container .company--card--container .company--logo {
   width: 50px;
@@ -29,16 +30,17 @@ h4 {
   position: relative;
   top: -25px;
 }
-.job--description--page--container .company--card--container .company--card--main h1 {
+.job--description--page--container .company--card--container .company--card--main .company--card--main--flex h1 {
   color: #19202d;
   margin-top: 0;
 }
-.job--description--page--container .company--card--container .company--card--main a {
+.job--description--page--container .company--card--container .company--card--main .company--card--main--flex a {
   display: block;
   text-decoration: none;
   color: #6e8098;
 }
 .job--description--page--container .company--card--container .company--card--main .button--navlink {
+  text-decoration: none;
   display: inline-block;
   padding: 1em 2em;
   margin-top: 2em;
@@ -56,14 +58,29 @@ h4 {
   padding: 2em;
   text-align: left;
 }
-.job--description--page--container .job--detail--container .job--detail--header {
+.job--description--page--container .job--detail--container .job--detail--header--flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.job--description--page--container .job--detail--container .job--detail--header--flex .job--detail--header {
   text-align: left;
 }
-.job--description--page--container .job--detail--container .job--detail--header .job--detail--header--top {
+.job--description--page--container .job--detail--container .job--detail--header--flex .job--detail--header .job--detail--header--top {
   display: flex;
   justify-content: left;
   align-items: center;
   color: #6e8098;
+}
+.job--description--page--container .job--detail--container .job--detail--header--flex .job--detail--header .job--detail--header--top p {
+  padding-right: 0.7em;
+  margin-bottom: 0;
+}
+.job--description--page--container .job--detail--container .job--detail--header--flex .job--detail--header .job--detail--header--top span {
+  font-weight: bold;
+  font-size: 1.85rem;
+  padding-right: 0.7rem;
+  margin-bottom: 0;
 }
 .job--description--page--container main h1 {
   margin-bottom: 1em;
@@ -103,4 +120,109 @@ h4 {
   font-weight: bold;
   font-size: 1rem;
   border-radius: 6px;
+}
+
+@media (min-width: 768px) {
+  .job--description--page--container .company--card--container {
+    width: 100%;
+    display: flex;
+    justify-content: left;
+    text-align: left;
+    padding: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+  }
+  .job--description--page--container .company--card--container .company--logo {
+    position: static;
+    background-size: 60%;
+    width: 140px;
+    height: 140px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 6px;
+    margin-left: 0;
+    margin-right: 2em;
+  }
+  .job--description--page--container .company--card--container .company--card--main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .job--description--page--container .company--card--container .company--card--main .company--card--main--flex text-align:left h1 {
+    font-size: 1.5rem;
+  }
+  .job--description--page--container .company--card--container .company--card--main .company--card--main--flex a {
+    display: block;
+    text-decoration: none;
+    color: #6e8098;
+  }
+  .job--description--page--container .company--card--container .company--card--main .button--navlink {
+    display: inline-block;
+    padding: 1em 2em;
+    margin-top: 0;
+    margin-right: 2em;
+    color: #5964e0;
+    font-weight: bold;
+    background-color: #eeeffc;
+    border-radius: 6px;
+  }
+  .job--description--page--container .company--card--container .company--card--main .button--navlink:hover {
+    background-color: #c5c9f4;
+  }
+  .job--description--page--container .job--detail--container {
+    background-color: #ffffff;
+    border-radius: 6px;
+    padding: 2em;
+    text-align: left;
+  }
+  .job--description--page--container .job--detail--container .job--detail--header {
+    text-align: left;
+  }
+  .job--description--page--container .job--detail--container .job--detail--header .job--detail--header--top {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    color: #6e8098;
+  }
+  .job--description--page--container .job--detail--container .job--detail--header .job--detail--header--top p {
+    padding-right: 0.7em;
+    margin-bottom: 0;
+  }
+  .job--description--page--container .job--detail--container .job--detail--header .job--detail--header--top span {
+    font-weight: bold;
+    font-size: 1.85rem;
+    padding-right: 0.7rem;
+    margin-bottom: 0;
+  }
+  .job--description--page--container main h1 {
+    margin-bottom: 1em;
+  }
+  .job--description--page--container main ul,
+  .job--description--page--container main ol {
+    padding-left: 0;
+    margin: 2em auto 2em 1em;
+  }
+  .job--description--page--container main ul li,
+  .job--description--page--container main ol li {
+    margin-bottom: 1em;
+  }
+  .job--description--page--container main ul li::marker,
+  .job--description--page--container main ol li::marker {
+    color: #5964e0;
+    font-weight: bold;
+    padding-right: 20px;
+  }
+  .job--description--page--container main p,
+  .job--description--page--container main li {
+    line-height: 1.625;
+    color: #6e8098;
+  }
+  .job--description--page--container main ol li {
+    list-style-position: outside;
+    padding-left: 10px;
+  }
 }/*# sourceMappingURL=JobDetailPage.css.map */
