--- a/src/components/JobCard.tsx/JobCard.style.css
+++ b/src/components/JobCard.tsx/JobCard.style.css
@@ -1,6 +1,10 @@
+a {
+  text-decoration: none;
+}
+
 .jobcard--container {
   text-align: left;
-  margin: 2.5em 1em;
+  margin: 1em;
   padding: 1em;
   border-radius: 6px;
 }
