--- a/src/components/JobList/JobList.style.scss
+++ b/src/components/JobList/JobList.style.scss
@@ -1,5 +1,21 @@
-.joblist--container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 1em;
+@import "../../variables.scss";
+.desktop--joblist--container {
+  .joblist--container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 1em;
+    .load--more--btn {
+      display: inline-block;
+      margin: 0 auto;
+      width: 60%;
+      text-decoration: none;
+      background-color: $violet;
+      text-align: center;
+      padding: 1em;
+      color: $pureWhite;
+      font-weight: bold;
+      font-size: 1rem;
+      border-radius: 6px;
+    }
+  }
 }
