--- a/src/components/Header/Header.style.scss
+++ b/src/components/Header/Header.style.scss
@@ -13,3 +13,11 @@ header {
     height: 32px;
   }
 }
+@media (min-width: 769px) {
+  header {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 0;
+  }
+}
