--- a/src/components/JobList/JobList.style.css
+++ b/src/components/JobList/JobList.style.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 1em;
+  margin-top: 70px;
 }
 .desktop--joblist--container .joblist--container .load--more--btn {
   display: inline-block;
