--- a/src/components/JobList/JobList.style.scss
+++ b/src/components/JobList/JobList.style.scss
@@ -4,6 +4,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1em;
+    margin-top: 70px;
     .load--more--btn {
       display: inline-block;
       margin: 0 auto;
