--- a/src/components/Search/Search.style.scss
+++ b/src/components/Search/Search.style.scss
@@ -2,17 +2,47 @@
 .form--container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 1.5em;
   margin: 1.5em 1.5em 0 1.5em;
-  position: relative;
-  top: -55px;
+  position: fixed;
+  top: 70px;
+  left: 5%;
+  width: 80%;
   border-radius: 12px;
   input {
     border: none;
+    width: 120px;
     height: 80px;
     color: $darkGrey;
     background-color: transparent;
-    border-right: 1px $darkGrey solid;
+    // border-right: 1px $darkGrey solid;
+  }
+  .icon--flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-width: 80px;
+
+    button {
+      background-color: $violet;
+      border: none;
+      padding: 0.5em;
+      font-size: 1.5rem;
+      color: $pureWhite;
+      border-radius: 6px;
+      width: 48px;
+      height: 48px;
+    }
+  }
+  .popUp {
+    position: fixed;
+    background-color: $pureWhite;
+    padding: 2em;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
   }
 }
 .form--container--light {
@@ -24,4 +54,37 @@
 
 ::placeholder {
   color: $darkGrey;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+// .search-on-top {
+//   position: fixed;
+//   margin: 0 auto;
+//   top: 90px;
+//   left: 5%;
+//   width: 90%;
+//   z-index: 0;
+// }
+@media (min-width: 789px) {
+  .form--container {
+    label {
+      display: inline;
+      vertical-align: middle;
+      .checkbox {
+        width: 20px;
+        display: inline;
+      }
+    }
+
+    input {
+      border-right: 1px $darkGrey solid;
+    }
+  }
 }
