--- a/src/components/Search/Search.style.css
+++ b/src/components/Search/Search.style.css
@@ -41,6 +41,46 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1000;
+  width: 80%;
+  border-radius: 6px;
+}
+.form--container .popUp .icon--input--wrapper {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+.form--container .popUp .icon--input--wrapper img {
+  width: 17px;
+  height: 24px;
+}
+.form--container .popUp .icon--input--wrapper input {
+  margin-left: 1rem;
+}
+.form--container .popUp .checkbox--label--wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  text-align: left;
+}
+.form--container .popUp .checkbox--label--wrapper input {
+  display: block;
+  height: 20px;
+  width: 20px;
+  margin-right: 1em;
+}
+.form--container .popUp .checkbox--label--wrapper label {
+  font-weight: bold;
+  color: #19202d;
+}
+.form--container .popUp button {
+  width: 100%;
+  margin-top: 1em;
+  background-color: #5964e0;
+  color: #ffffff;
+  border: none;
+  border-radius: 6px;
+  padding: 1em;
+  font-weight: bold;
 }
 
 .form--container--light {
