--- a/src/components/Search/Search.style.scss
+++ b/src/components/Search/Search.style.scss
@@ -43,6 +43,46 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
+    width: 80%;
+    border-radius: 6px;
+    .icon--input--wrapper {
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      img {
+        width: 17px;
+        height: 24px;
+      }
+      input {
+        margin-left: 1rem;
+      }
+    }
+    .checkbox--label--wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: left;
+      text-align: left;
+      input {
+        display: block;
+        height: 20px;
+        width: 20px;
+        margin-right: 1em;
+      }
+      label {
+        font-weight: bold;
+        color: $veryDarkBlue;
+      }
+    }
+    button {
+      width: 100%;
+      margin-top: 1em;
+      background-color: $violet;
+      color: $pureWhite;
+      border: none;
+      border-radius: 6px;
+      padding: 1em;
+      font-weight: bold;
+    }
   }
 }
 .form--container--light {
@@ -64,6 +104,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1000;
 }
+
 // .search-on-top {
 //   position: fixed;
 //   margin: 0 auto;
