--- a/src/components/Search/Search.style.css
+++ b/src/components/Search/Search.style.css
@@ -4,10 +4,8 @@
   align-items: center;
   padding: 0 1.5em;
   margin: 1.5em 1.5em 0 1.5em;
-  position: fixed;
-  top: 70px;
-  left: 5%;
-  width: 80%;
+  position: relative;
+  top: -60px;
   border-radius: 12px;
 }
 .form--container input {
@@ -99,14 +97,24 @@
   color: #6e8098;
 }
 
+.container {
+  height: 10px;
+}
+
 .overlay {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  opacity: 0;
+  pointer-events: none; /* Ensure clicks pass through the overlay */
+  transition: opacity 0.3s ease;
+}
+
+.overlay.active {
+  opacity: 1;
 }
 
 @media (min-width: 789px) {
