--- a/src/components/Search/Search.style.scss
+++ b/src/components/Search/Search.style.scss
@@ -5,10 +5,10 @@
   align-items: center;
   padding: 0 1.5em;
   margin: 1.5em 1.5em 0 1.5em;
-  position: fixed;
-  top: 70px;
-  left: 5%;
-  width: 80%;
+  position: relative;
+  top: -60px;
+  // left: 5%;
+  // width: 80%;
   border-radius: 12px;
   input {
     border: none;
@@ -95,14 +95,29 @@
 ::placeholder {
   color: $darkGrey;
 }
+.container {
+  height: 10px;
+  // display: flex;
+  // justify-content: center; /* Center content horizontally */
+  // align-items: center; /* Center content vertically */
+  // min-height: 100vh; /* Ensure container covers the full viewport height */
+  // position: relative;
+}
+
 .overlay {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  opacity: 0;
+  pointer-events: none; /* Ensure clicks pass through the overlay */
+  transition: opacity 0.3s ease;
+}
+
+.overlay.active {
+  opacity: 1;
 }
 
 // .search-on-top {
