--- a/src/components/JobList/JobList.style.css
+++ b/src/components/JobList/JobList.style.css
@@ -1,8 +1,12 @@
+.desktop--joblist--container {
+  max-width: 1280px;
+  margin: 0 auto;
+}
 .desktop--joblist--container .joblist--container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 1em;
-  margin-top: 70px;
+  margin-top: 30px;
 }
 .desktop--joblist--container .joblist--container .load--more--btn {
   display: inline-block;
