--- a/src/App.scss
+++ b/src/App.scss
@@ -6,8 +6,8 @@
 
 #root,
 body {
-  max-width: 1280px;
-  margin: 0;
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 0;
 
   // text-align: center;
