--- a/src/components/JobDetailPage/JobDetailPage.css
+++ b/src/components/JobDetailPage/JobDetailPage.css
@@ -13,8 +13,24 @@ h4 {
   position: relative;
   top: -35px;
 }
-.job--description--page--container .company--card--container {
+.job--description--page--container .company--card--container--dark {
+  background-color: #19202d;
+}
+.job--description--page--container .company--card--container--dark .company--card--main .company--card--main--flex h1 {
+  color: #ffffff;
+}
+.job--description--page--container .company--card--container--dark .company--card--main .button--navlink {
+  background-color: #303642;
+  color: #ffffff;
+}
+.job--description--page--container .company--card--container--light {
   background-color: #ffffff;
+}
+.job--description--page--container .company--card--container--light .company--card--main .button--navlink {
+  color: #5964e0;
+  background-color: #eeeffc;
+}
+.job--description--page--container .company--card--container {
   padding: 0 3em 2em 3em;
   border-radius: 6px;
   margin-bottom: 2em;
@@ -31,7 +47,6 @@ h4 {
   top: -25px;
 }
 .job--description--page--container .company--card--container .company--card--main .company--card--main--flex h1 {
-  color: #19202d;
   margin-top: 0;
 }
 .job--description--page--container .company--card--container .company--card--main .company--card--main--flex a {
@@ -44,16 +59,25 @@ h4 {
   display: inline-block;
   padding: 1em 2em;
   margin-top: 2em;
-  color: #5964e0;
   font-weight: bold;
-  background-color: #eeeffc;
   border-radius: 6px;
 }
 .job--description--page--container .company--card--container .company--card--main .button--navlink:hover {
   background-color: #c5c9f4;
 }
-.job--description--page--container .job--detail--container {
+.job--description--page--container .job--detail--container--light {
   background-color: #ffffff;
+}
+.job--description--page--container .job--detail--container--dark {
+  background-color: #19202d;
+}
+.job--description--page--container .job--detail--container--dark .job--detail--header--main h1 {
+  color: #ffffff;
+}
+.job--description--page--container .job--detail--container--dark main h1 {
+  color: #ffffff;
+}
+.job--description--page--container .job--detail--container {
   border-radius: 6px;
   padding: 2em;
   text-align: left;
@@ -123,6 +147,10 @@ h4 {
 }
 
 @media (min-width: 768px) {
+  .job--description--page--container {
+    max-width: 730px;
+    margin: 0 auto;
+  }
   .job--description--page--container .company--card--container {
     width: 100%;
     display: flex;
@@ -165,16 +193,13 @@ h4 {
     padding: 1em 2em;
     margin-top: 0;
     margin-right: 2em;
-    color: #5964e0;
     font-weight: bold;
-    background-color: #eeeffc;
     border-radius: 6px;
   }
   .job--description--page--container .company--card--container .company--card--main .button--navlink:hover {
     background-color: #c5c9f4;
   }
   .job--description--page--container .job--detail--container {
-    background-color: #ffffff;
     border-radius: 6px;
     padding: 2em;
     text-align: left;
