--- a/src/components/JobList/JobList.style.scss
+++ b/src/components/JobList/JobList.style.scss
@@ -1,10 +1,12 @@
 @import "../../variables.scss";
 .desktop--joblist--container {
+  max-width: 1280px;
+  margin: 0 auto;
   .joblist--container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1em;
-    margin-top: 70px;
+    margin-top: 30px;
     .load--more--btn {
       display: inline-block;
       margin: 0 auto;
