--- a/src/components/Search/Search.style.scss
+++ b/src/components/Search/Search.style.scss
@@ -14,7 +14,7 @@
     border: none;
     width: 120px;
     height: 80px;
-    color: $darkGrey;
+    color: $lightGrey;
     background-color: transparent;
     // border-right: 1px $darkGrey solid;
   }
@@ -57,6 +57,7 @@
         margin-left: 1rem;
       }
     }
+
     .checkbox--label--wrapper {
       display: flex;
       align-items: center;
@@ -93,8 +94,9 @@
 }
 
 ::placeholder {
-  color: $darkGrey;
+  color: $lightGrey;
 }
+
 .container {
   height: 10px;
   // display: flex;
