--- a/src/components/Search/Search.style.scss
+++ b/src/components/Search/Search.style.scss
@@ -14,7 +14,7 @@
     border: none;
     width: 120px;
     height: 80px;
-    color: $lightGrey;
+    color: $grey;
     background-color: transparent;
     // border-right: 1px $darkGrey solid;
   }
@@ -94,7 +94,7 @@
 }
 
 ::placeholder {
-  color: $lightGrey;
+  color: $grey;
 }
 
 .container {
