--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,10 @@ body {
   // text-align: center;
   font-family: $font;
 }
+.dark,
+.light {
+  height: 100%;
+}
 .dark {
   background-color: $midnight;
 }
