--- a/src/components/JobList/JobList.style.css
+++ b/src/components/JobList/JobList.style.css
@@ -1,6 +1,7 @@
 .desktop--joblist--container {
   max-width: 1280px;
   margin: 0 auto;
+  height: 100%;
 }
 .desktop--joblist--container .joblist--container {
   display: grid;
