--- a/src/components/Search/Search.style.css
+++ b/src/components/Search/Search.style.css
@@ -124,6 +124,7 @@
   }
   .form--container label .checkbox {
     width: 20px;
+    height: 20px;
     display: inline;
   }
   .form--container input {
