--- a/src/components/Search/Search.style.css
+++ b/src/components/Search/Search.style.css
@@ -118,16 +118,44 @@
 }
 
 @media (min-width: 789px) {
-  .form--container label {
-    display: inline;
-    vertical-align: middle;
+  .form--container {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 0;
   }
-  .form--container label .checkbox {
+  .form--container .icon--input--wrapper {
+    display: flex;
+    align-items: center;
+    padding-left: 1em;
+  }
+  .form--container .icon--input--wrapper:nth-child(2) {
+    padding-left: 0;
+  }
+  .form--container .icon--input--wrapper input {
+    border-right: 1px #9daec2 solid;
+    text-align: left;
+    min-width: 200px;
+    padding-left: 1em;
+  }
+  .form--container .checkbox--label--wrapper {
+    display: flex;
+    align-items: center;
+  }
+  .form--container .checkbox--label--wrapper .checkbox {
     width: 20px;
     height: 20px;
     display: inline;
   }
-  .form--container input {
-    border-right: 1px #6e8098 solid;
+  .form--container .checkbox--label--wrapper label {
+    padding: 0.7em;
+    font-weight: bold;
+  }
+  .form--container button {
+    background-color: #5964e0;
+    color: #ffffff;
+    border: none;
+    border-radius: 6px;
+    padding: 1em;
+    font-weight: bold;
   }
 }/*# sourceMappingURL=Search.style.css.map */
