--- a/src/components/JobDetailPage/JobDetailPage.scss
+++ b/src/components/JobDetailPage/JobDetailPage.scss
@@ -161,14 +161,26 @@ footer {
   width: 100%;
 
   padding: 2em;
+  p {
+    color: $grey;
+    margin-top: 0.5em;
+  }
+  h1 {
+    margin-bottom: 0;
+  }
 }
 
 .footer--light {
   background-color: $pureWhite;
+  color: $veryDarkBlue;
 }
 
 .footer--dark {
   background-color: $veryDarkBlue;
+
+  h1 {
+    color: $pureWhite;
+  }
 }
 
 .apply--btn {
@@ -305,6 +317,16 @@ footer {
           list-style-position: outside;
           padding-left: 10px;
         }
+      }
+    }
+  }
+  footer {
+    .footer--flex--wrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      button {
+        display: block;
       }
     }
   }
