--- a/src/components/Search/Search.style.scss
+++ b/src/components/Search/Search.style.scss
@@ -130,21 +130,25 @@
 //   width: 90%;
 //   z-index: 0;
 // }
-@media (min-width: 789px) {
+@media (min-width: 769px) {
   .form--container {
-    display: flex;
-    justify-content: space-between;
-    padding-left: 0;
+    // display: flex;
+    // justify-content: space-between;
+    // padding-left: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr) 1fr;
+    gap: 10px;
+    align-items: center;
 
     .icon--input--wrapper {
       display: flex;
       align-items: center;
       padding-left: 1em;
+      border-right: 1px $grey solid;
       &:nth-child(2) {
-        padding-left: 0;
+        padding-left: 2em;
       }
       input {
-        border-right: 1px $grey solid;
         text-align: left;
         min-width: 200px;
         padding-left: 1em;
@@ -153,6 +157,8 @@
     .checkbox--label--wrapper {
       display: flex;
       align-items: center;
+      padding-left: 2em;
+
       .checkbox {
         width: 20px;
         height: 20px;
@@ -166,7 +172,10 @@
 
     button {
       background-color: $violet;
+      display: inline-block;
+      width: 70%;
       color: $pureWhite;
+      justify-self: right;
 
       border: none;
       border-radius: 6px;
