--- a/src/components/JobList/JobList.style.scss
+++ b/src/components/JobList/JobList.style.scss
@@ -14,6 +14,7 @@
     display: block;
     margin: 3em auto;
     width: 60%;
+    border: none;
 
     text-decoration: none;
     background-color: $violet;
