--- a/src/components/Search/Search.style.scss
+++ b/src/components/Search/Search.style.scss
@@ -99,11 +99,6 @@
 
 .container {
   height: 10px;
-  // display: flex;
-  // justify-content: center; /* Center content horizontally */
-  // align-items: center; /* Center content vertically */
-  // min-height: 100vh; /* Ensure container covers the full viewport height */
-  // position: relative;
 }
 
 .overlay {
@@ -112,9 +107,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
-  pointer-events: none; /* Ensure clicks pass through the overlay */
+  pointer-events: none;
   transition: opacity 0.3s ease;
 }
 
@@ -122,14 +117,6 @@
   opacity: 1;
 }
 
-// .search-on-top {
-//   position: fixed;
-//   margin: 0 auto;
-//   top: 90px;
-//   left: 5%;
-//   width: 90%;
-//   z-index: 0;
-// }
 @media (min-width: 769px) {
   .form--container {
     // display: flex;
